# instruct

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/: constants.hpp  data.cpp  data.hpp  logging.cpp  logging.hpp  main.cpp  network.cpp  network.hpp  notification.cpp  notification.hpp  security.cpp  security.hpp  setup.cpp  setup.hpp  terminal.hpp  ui.cpp  ui.hpp
src/ui/: ui.cpp
src/ui/menus/: setup_menu.cpp
src/ui/util/: input.cpp  input.hpp  spinner.cpp  spinner.hpp  terminal.cpp  terminal.hpp
